k8s/kind/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ptolemaios-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - protocol: HTTP
    port: 80
    name: ptolemaios

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ptolemaios
spec:
  parentRefs:
  - name: ptolemaios-gateway
  hostnames:
  - "ptolemaios.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ptolemaios
      port: 80
